<resources>
    <string name="app_name">Currency Converter</string>
    <string name="currency_converter">Currency converter</string>
    <string name="my_balances">My Balances</string>
    <string name="currency_exchange">Currency Exchange</string>
    <string name="sell">Sell</string>
    <string name="submit">Submit</string>
    <string name="receive">Receive</string>
    <string name="ok">Ok</string>
    <string name="error">Error</string>
    <string name="currency_converted">Currency Converted</string>
</resources>